--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,18 +38,18 @@ endif()
 add_executable(ctd src/ctd.cpp)
 
 # Add compile and link options to our target. We differentiate between gcc and clang
-if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     if(CMAKE_VERSION VERSION_LESS "3.1")
-        target_compile_options(ctd PRIVATE -std=gnu${CMAKE_CXX_STANDARD})
+        target_compile_options(ctd PRIVATE -std=c++${CMAKE_CXX_STANDARD})
     endif()
     target_compile_options(ctd PRIVATE -Wall)
     target_compile_options(ctd PRIVATE -Wextra)
     target_compile_options(ctd PRIVATE -pedantic)
     #target_compile_options(ctd PRIVATE -pg)
     #target_link_options(ctd PRIVATE -pg)
-elseif(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     if(CMAKE_VERSION VERSION_LESS "3.1")
-        target_compile_options(ctd PRIVATE -std=gnu${CMAKE_CXX_STANDARD})
+        target_compile_options(ctd PRIVATE -std=c++${CMAKE_CXX_STANDARD})
     endif()
     target_compile_options(ctd PRIVATE -Wall)
     target_compile_options(ctd PRIVATE -Wextra)
