--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ add_executable(ctd src/ctd.cpp)
 # Add compile and link options to our target. We differentiate between gcc and clang
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     if(CMAKE_VERSION VERSION_LESS "3.1")
-        target_compile_options(ctd PRIVATE -std=c++${CMAKE_CXX_STANDARD})
+        target_compile_options(ctd PRIVATE -std=gnu++${CMAKE_CXX_STANDARD})
     endif()
     target_compile_options(ctd PRIVATE -Wall)
     target_compile_options(ctd PRIVATE -Wextra)
@@ -49,7 +49,7 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     #target_link_options(ctd PRIVATE -pg)
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     if(CMAKE_VERSION VERSION_LESS "3.1")
-        target_compile_options(ctd PRIVATE -std=c++${CMAKE_CXX_STANDARD})
+        target_compile_options(ctd PRIVATE -std=gnu++${CMAKE_CXX_STANDARD})
     endif()
     target_compile_options(ctd PRIVATE -Wall)
     target_compile_options(ctd PRIVATE -Wextra)
