yaml-cpp as submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,10 @@
-cmake_minimum_required(VERSION 2.8.12...3.10)
+cmake_minimum_required(VERSION 3.6...3.10)
 
 # Define the project
-project(ctd CXX C)
+project(ctd CXX)
 
 # Import our local cmake Modules (if any)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
-
-# We require a compiler with support for at least C++17
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # If build type is not specified, it defaults to Debug. Set build type explicitly
 # with -DCMAKE_BUILD_TYPE=<type> where <type> is one of: Debug, Release or RelWithDebInfo
@@ -20,10 +16,10 @@ else()
 endif ()
 set(CMAKE_BUILD_TYPE "${CTD_TMP_BUILD_TYPE}" CACHE STRING "Choose the type of build. Options are: Debug, Release or RelWithDebInfo" FORCE)
 
-# We need the PkgConfig cmake module to be able to find libraries we depend on
+# We use the PkgConfig cmake module to be able to find libraries we depend on
 find_package(PkgConfig REQUIRED)
 
-# Use GNUInstallDirs to get standard install directories for include, lib, bin and so on
+# We use GNUInstallDirs to get standard install directories for include, lib, bin and so on
 include(GNUInstallDirs)
 
 # Create a uninstall target if it does not already exist. We need this before
@@ -34,42 +30,34 @@ if(NOT TARGET uninstall)
     add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
 endif()
 
-# Define a target for our program
+# Define the target for our program
 add_executable(ctd src/ctd.cpp)
 
-# Add compile and link options to our target. We differentiate between gcc and clang
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    if(CMAKE_VERSION VERSION_LESS "3.1")
-        target_compile_options(ctd PRIVATE -std=gnu++${CMAKE_CXX_STANDARD})
-    endif()
-    target_compile_options(ctd PRIVATE -Wall)
-    target_compile_options(ctd PRIVATE -Wextra)
-    target_compile_options(ctd PRIVATE -pedantic)
-    #target_compile_options(ctd PRIVATE -pg)
-    #target_link_options(ctd PRIVATE -pg)
-elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    if(CMAKE_VERSION VERSION_LESS "3.1")
-        target_compile_options(ctd PRIVATE -std=gnu++${CMAKE_CXX_STANDARD})
-    endif()
-    target_compile_options(ctd PRIVATE -Wall)
-    target_compile_options(ctd PRIVATE -Wextra)
-    target_compile_options(ctd PRIVATE -Wpedantic)
-else()
-endif()
+# Add compile and link options to our target
+target_compile_options(ctd PRIVATE -std=gnu++17)
+target_compile_options(ctd PRIVATE -Wall)
+target_compile_options(ctd PRIVATE -Wextra)
+target_compile_options(ctd PRIVATE -pedantic)
+#target_compile_options(ctd PRIVATE -pg)
+#target_link_options(ctd PRIVATE -pg)
 
-# Add argparse submodule to the include paths
-target_include_directories(ctd PUBLIC ${PROJECT_SOURCE_DIR}/argparse/include)
+# We use threads
+find_package(Threads REQUIRED)
+target_link_libraries (ctd Threads::Threads)
+
+# Add argparse submodule to the include paths (argparse is include only)
+target_include_directories(ctd PRIVATE ${PROJECT_SOURCE_DIR}/argparse/include)
+
+# Add yaml-cpp as a static submodule (.a)
+add_subdirectory(yaml-cpp EXCLUDE_FROM_ALL)
+target_include_directories(ctd PRIVATE ${PROJECT_SOURCE_DIR}/yaml-cpp/include)
+target_link_libraries(ctd yaml-cpp)
 
 # Add support for installing our program
 install(TARGETS ctd RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR})
 
 # Create empty install_manifest.txt so that it does not get owned by root on sudo make install
 execute_process(COMMAND ${CMAKE_COMMAND} -E touch "${CMAKE_CURRENT_BINARY_DIR}/install_manifest.txt")
-
-# Requre thread support in a cmake 2.8.12 portable way
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
-target_link_libraries(ctd ${CMAKE_THREAD_LIBS_INIT})
 
 # Dump our config for review
 message(STATUS "The following build options will be used for ctd:")
