--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    name: Build, install, run and ininstall
+    name: Build, install, run and uninstall
     runs-on: ${{ matrix.runner }}
     strategy:
       matrix:
@@ -36,8 +36,8 @@ jobs:
       - name: Build and install
         run: cd build && make && sudo make install
 
-      - name: run
-        run: cd build && ./ctd -c ../config/ctd.example.yaml
+      - name: Run
+        run: ctd -c config/ctd.example.yaml
 
       - name: Uninstall
         run: cd build && sudo make uninstall
