--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ${{ matrix.runner }}
     strategy:
       matrix:
-        runner: [ ubuntu-20.04, ubuntu-22.04 ]
+        runner: [ ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
     steps:
       - name: Install build requirements
         run: sudo apt-get update ; sudo apt-get install -y cmake g++ pkg-config
