Enable SSL support in httplib if openssl >= 3.0.0 is available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if(NOT DEFINED CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
     set(CTD_TMP_BUILD_TYPE "Debug")
 else()
     set(CTD_TMP_BUILD_TYPE "${CMAKE_BUILD_TYPE}")
-endif ()
+endif()
 set(CMAKE_BUILD_TYPE "${CTD_TMP_BUILD_TYPE}" CACHE STRING "Choose the type of build. Options are: Debug, Release or RelWithDebInfo" FORCE)
 
 # We use the PkgConfig cmake module to be able to find libraries we depend on
@@ -61,6 +61,21 @@ target_include_directories(ctd PRIVATE ${PROJECT_SOURCE_DIR}/json/include)
 add_subdirectory(yaml-cpp EXCLUDE_FROM_ALL)
 target_include_directories(ctd PRIVATE ${PROJECT_SOURCE_DIR}/yaml-cpp/include)
 target_link_libraries(ctd yaml-cpp)
+
+message(STATUS "Checking for openssl...")
+pkg_check_modules(OPENSSL QUIET openssl)
+if(OPENSSL_FOUND)
+    message(STATUS "openssl version ${OPENSSL_VERSION} found.")
+    if(OPENSSL_VERSION VERSION_LESS "3.0.0")
+        message(STATUS "openssl version is to old. Version 3.0.0 or above is required. TLS support will not be compiled in.")
+    else()
+        message(STATUS "TLS support will be compiled in.")
+        add_definitions(-DCPPHTTPLIB_OPENSSL_SUPPORT)
+        target_link_libraries(ctd ${OPENSSL_LIBRARIES})
+    endif()
+else()
+    message(STATUS "openssl not found. TLS support will not be compiled in.")
+endif()
 
 # Add support for installing our program
 install(TARGETS ctd RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR})
