Install libssl-dev on CI job

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
         runner: [ ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
     steps:
       - name: Install build requirements
-        run: sudo apt-get update ; sudo apt-get install -y cmake g++ pkg-config
+        run: sudo apt-get update ; sudo apt-get install -y cmake g++ pkg-config libssl-dev
 
       - name: Checkout
         uses: actions/checkout@v4
