Add printout of openssl use or not

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ add_subdirectory(yaml-cpp EXCLUDE_FROM_ALL)
 target_include_directories(ctd PRIVATE ${PROJECT_SOURCE_DIR}/yaml-cpp/include)
 target_link_libraries(ctd yaml-cpp)
 
+set(CTD_USING_OPENSSL "No")
 message(STATUS "Checking for openssl...")
 pkg_check_modules(OPENSSL QUIET openssl)
 if(OPENSSL_FOUND)
@@ -71,6 +72,7 @@ if(OPENSSL_FOUND)
         message(STATUS "openssl version is to old. Version 3.0.0 or above is required. TLS support will not be compiled in.")
     else()
         message(STATUS "TLS support will be compiled in.")
+        set(CTD_USING_OPENSSL "Yes")
         add_definitions(-DCPPHTTPLIB_OPENSSL_SUPPORT)
         target_link_libraries(ctd ${OPENSSL_LIBRARIES})
     endif()
@@ -87,6 +89,7 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E touch "${CMAKE_CURRENT_BINARY_DIR}/i
 # Dump our config for review
 message(STATUS "The following build options will be used for ctd:")
 message(STATUS "    CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
+message(STATUS "    CTD_USING_OPENSSL=${CTD_USING_OPENSSL}")
 message(STATUS "    CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID}")
 message(STATUS "    CMAKE_CXX_COMPILER_VERSION=${CMAKE_CXX_COMPILER_VERSION}")
 message(STATUS "    CMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}")
