Explicitly set include and library dirs for openssl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,8 @@ if(OPENSSL_FOUND)
         message(STATUS "TLS support will be compiled in.")
         set(CTD_USING_OPENSSL "Yes")
         add_definitions(-DCPPHTTPLIB_OPENSSL_SUPPORT)
+        target_include_directories(ctd PRIVATE ${OPENSSL_INCLUDE_DIRS})
+        target_link_directories(ctd PRIVATE ${OPENSSL_LIBRARY_DIRS})
         target_link_libraries(ctd ${OPENSSL_LIBRARIES})
     endif()
 else()
